feat: 完成用户注册
